syntax = "proto3";
package test;
option go_package = "github.com/samrketer/grpc-go-react/generator/gen";

message X {
    string secret = 1;
    string nonSecret = 2;
    optional string secretPtr = 3;
    optional string nonSecretPtr = 4;
}

message Xs {
    repeated X data = 1;
}
